2012-01-26  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Kickstart the extension